# gsmtasks-completed-error

./: README.md  pyproject.toml
src/gsmtasks_complete/: __main__.py
