[tool.poetry]
name = "gsmtasks-complete"
version = "0.1.0"
description = ""
authors = ["Raphael Krupinski <10319569-mattesilver@users.noreply.gitlab.com>"]
readme = "README.md"
packages = [{include = "gsmtasks_complete", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
asyncclick = "^8.1.3.4"
gsmtasks-client = "^0.3.0"
pytz = "^2022.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
